src/test/ui/associated-types/hr-associated-type-bound-param-1.stderr
error[E0277]: the trait bound `for<'b> <u8 as Y<'b, u8>>::V: Clone` is not satisfied
  --> $DIR/hr-associated-type-bound-param-1.rs:14:14
   |
LL | trait Y<'a, T: ?Sized>
   |       - required by a bound in this
...
LL |     for<'b> <Self as Y<'b, T>>::V: Clone,
   |                                    ----- required by this bound in `Y`
...
LL |     type V = str;
   |              ^^^ the trait `for<'b> Clone` is not implemented for `<u8 as Y<'b, u8>>::V`
   |
   = help: the following implementations were found:
             <&T as Clone>

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
